recursion.lessons.recursion.koch.Crab.scala.error
Crab:11: error: expected start of definition
	override def run() {
                 ^Crab:14: error: Unmatched closing brace '}' ignored here
}
^